--- a/camera.html
+++ b/camera.html
@@ -6,30 +6,46 @@
     <script src="renderer.js" type="text/javascript"></script>
     <script src="sylvester.js" type="text/javascript"></script>
     <script src="camera.js" type="text/javascript"></script>
+    <style>
+      fieldset { display: inline; padding: 0.5ex;}
+    </style>
   </head>
   <body>
     <div>
       <div style="margin-bottom:1em">
-        <label>scale:</label>
-        <select id="capture_scale">
-          <option value="0.25">25%</option>
-          <option value="0.50">50%</option>
-          <option value="0.75">75%</option>
-          <option value="1.00" selected>100%</option>
-        </select>
-        <label style="margin-left:1em">x264 preset:</label>
-        <select id="x264presets">
-          <option value="0" selected>UltraFast</option>
-          <option value="1">SuperFast</option>
-          <option value="2">VeryFast</option>
-          <option value="3">Faster</option>
-          <option value="4">Fast</option>
-          <option value="5">Medium</option>
-          <option value="6">Slow</option>
-          <option value="7">Slower</option>
-          <option value="8">VerySlow</option>
-          <option value="9">Placebo</option>
-        </select>
+        <fieldset>
+          <legend>encoder</legend>
+          <select id="encoder">
+            <option value="x264">x264</option>
+            <option value="openh264">openH264</option>
+          </select>
+        </fieldset>
+        <fieldset>
+          <legend>common config</legend>
+          <label>scale:</label>
+          <select id="capture_scale">
+            <option value="0.25">25%</option>
+            <option value="0.50">50%</option>
+            <option value="0.75">75%</option>
+            <option value="1.00" selected>100%</option>
+          </select>
+        </fieldset>
+        <fieldset id="x264cfg">
+          <legend>x264 config</legend>
+          <label>preset:</label>
+          <select id="x264presets">
+            <option value="0" selected>UltraFast</option>
+            <option value="1">SuperFast</option>
+            <option value="2">VeryFast</option>
+            <option value="3">Faster</option>
+            <option value="4">Fast</option>
+            <option value="5">Medium</option>
+            <option value="6">Slow</option>
+            <option value="7">Slower</option>
+            <option value="8">VerySlow</option>
+            <option value="9">Placebo</option>
+          </select>
+        </fieldset>
         <button id="start">start</button>
         <div id="status" style="display: inline"></div>
       </div>
