--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <script src="renderer.js" type="text/javascript"></script>
     <script src="sylvester.js" type="text/javascript"></script>
     <script src="test.js" type="text/javascript"></script>
-    <script src="libx264.js" type="text/javascript" async></script>
   </head>
   <body>
     <div>
@@ -24,7 +23,7 @@
         <button id="h264test">Play H.264</button>
       </fieldset>
       <fieldset style="display: inline; padding:0.5ex">
-        <legend style="font-size: small">Encoder</legend>
+        <legend style="font-size: small">x264</legend>
         <select id="x264presets">
           <option value="0">UltraFast</option>
           <option value="1">SuperFast</option>
@@ -37,9 +36,13 @@
           <option value="8">VerySlow</option>
           <option value="9">Placebo</option>
         </select>
-        <button id="h264enc">Encode H.264</button>
-        <div id="encstatus" style="display: inline; font-size: small;"></div>
+        <button id="x264enc">Encode</button>
       </fieldset>
+      <fieldset style="display: inline; padding:0.5ex">
+        <legend style="font-size: small">openH264 Encoder</legend>
+        <button id="openh264enc">Encode</button>
+      </fieldset>
+      <div id="encstatus" style="display: inline; font-size: small;"></div>
     </div>
     <div id="drawArea">
     </div>
