--- a/camera.html
+++ b/camera.html
@@ -8,22 +8,25 @@
     <script src="camera.js" type="text/javascript"></script>
     <style>
       * { font-size: small; }
-      fieldset { display: inline; padding: 0.5ex;}
+      fieldset { display: inline; padding: 0.5ex; margin-bottom: 1ex}
     </style>
   </head>
   <body>
     <div>
       <div style="margin-bottom:1em">
         <fieldset>
-          <legend>encoder</legend>
-          <select id="encoder">
+          <legend>config</legend>
+          <label for="encoder">encoder:</label>
+          <select id="encoder" name="encoder">
             <option value="x264">x264</option>
             <option value="openh264">openH264</option>
           </select>
-        </fieldset>
-        <fieldset>
-          <legend>common config</legend>
-          <label>scale:</label>
+          <label for="renderer">renderer:</label>
+          <select id="renderer">
+            <option value="webgl">WebGL</option>
+            <option value="rgb">putImgDat</option>
+          </select>
+          <label>video-size:</label>
           <select id="capture_scale">
             <option value="0.25">25%</option>
             <option value="0.50">50%</option>
@@ -53,6 +56,7 @@
             <option value="veryslow">VerySlow</option>
             <option value="placebo">Placebo</option>
           </select>
+          <label for="x264tune">tune:</label>
           <select id="x264tune" name="x264tune">
             <option value="" selected>default</option>
             <option value="film">film</option>
@@ -66,7 +70,7 @@
           </select>
         </fieldset>
         <button id="start">start</button>
-        <div id="status" style="display: inline"></div>
+        <div id="status">(- fps - kbps - kbit/frame (avg: - fps - kbps -kbit/frame)</div>
       </div>
       <div style="display: inline-block">
         <div>source</div>
