y4m/h264ファイル再生時にもレンダラを選べるようにした

--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
       <input id="fileSelector" type="file"></input>
       <fieldset style="display: inline; padding:0.5ex">
         <legend style="font-size: small">Playback</legend>
+        <select id="renderer">
+          <option value="webgl">WebGL</option>
+          <option value="rgb">putImgDat</option>
+        </select>
         <select id="playback_scale">
           <option value="0.25">25%</option>
           <option value="0.50">50%</option>
