openH264を利用したエンコーダ・デコーダのサンプルを追加

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
           <input type="radio" name="input-type" id="input-camera">Camera
           <select id="camera-resolution">
             <optgroup label="4:3">
+              <option>160x120</option>
               <option>320x240</option>
               <option>640x480</option>
               <option>800x600</option>
@@ -44,6 +45,7 @@
       <fieldset>
         <legend>Action</legend>
         <button id="play">Play</button>
+        <button id="encdec">Encode &amp; Decode</button>
       </fieldset>
     </div>
     <div>
