libvpxを利用したエンコード／デコードに対応

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <legend>Codec</legend>
         <select id="codec_type">
           <option>daala</option>
-          <!--<option>libvpx</option>-->
+          <option>libvpx</option>
           <option>openH264</option>
           <!--<option>libde265</option>-->
         </select>
