--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <script src="test.js" type="text/javascript"></script>
     <style>
       fieldset { display: inline; padding: 1ex; margin-bottom: 1ex; vertical-align: top }
+      fieldset > fieldset { margin-bottom: 0ex; }
     </style>
   </head>
   <body>
@@ -41,12 +42,75 @@
       </fieldset>
       <fieldset>
         <legend>Codec</legend>
-        <select id="codec_type">
-          <option>daala</option>
-          <option>libvpx</option>
-          <option>openH264</option>
-          <!--<option>libde265</option>-->
-        </select>
+        <div style="margin-bottom: 1ex">
+          <select id="codec_type">
+            <option>daala</option>
+            <option>libvpx</option>
+            <option>openH264</option>
+            <!--<option>libde265</option>-->
+          </select>
+        </div>
+        <fieldset style="display: none" id="daala_config">
+          <legend>daala config</legend>
+          <div>
+            <label for="daala_config_quant">Quality:</label>
+            <select id="daala_config_quant"></select>
+          </div>
+          <div>
+            <label for="daala_config_complexity">Complexity:</label>
+            <select id="daala_config_complexity">
+              <option value="0" selected>0 (fast)</option>
+              <option>1</option><option>2</option><option>3</option><option>4</option><option>5</option>
+              <option>6</option><option>7</option><option>8</option><option>9</option>
+              <option value="10">10 (slow)</option>
+            </select>
+          </div>
+          <div>
+            <input type="checkbox" id="daala_config_activity_masking" checked>
+            <label for="daala_config_activity_masking">Use Activity Masking</label>
+          </div>
+          <div>
+            <label for="daala_config_qm">Quantization Matrix:</label>
+            <select id="daala_config_qm">
+              <option value="0">flat</option>
+              <option value="1" selected>HVS</option>
+            </select>
+          </div>
+          <div>
+            <input type="checkbox" id="daala_config_mc_use_chroma" checked>
+            <label for="daala_config_mc_use_chroma">Use chroma in the motion compensation search</label>
+          </div>
+          <div>
+            <label for="daala_config_mv_res_min">Min motion vectors resolution</label>
+            <select id="daala_config_mv_res_min">
+              <option value="0" selected>1/8 pel</option>
+              <option value="1">1/4 pel</option>
+              <option value="2">1/2 pel</option>
+            </select>
+          </div>
+          <div>
+            <label for="daala_config_mv_level_min">Min motion vectors level</label>
+            <select id="daala_config_mv_level_min">
+              <option selected>0</option><option>1</option><option>2</option><option>3</option><option>4</option>
+            </select>
+          </div>
+          <div>
+            <label for="daala_config_mv_level_max">Max motion vectors level</label>
+            <select id="daala_config_mv_level_max">
+              <option>0</option><option>1</option><option>2</option><option>3</option><option selected>4</option>
+            </select>
+          </div>
+          <div>
+            <input type="checkbox" id="daala_config_mc_use_satd">
+            <label for="daala_config_mc_use_satd">Use SATD metric in the motion compensation</label>
+          </div>
+        </fieldset>
+        <fieldset style="display: none" id="libvpx_config">
+          <legend>libvpx config</legend>
+        </fieldset>
+        <fieldset style="display: none" id="openh264_config">
+          <legend>openH264 config</legend>
+        </fieldset>
       </fieldset>
     </div>
     <div>
