vp8/vp9/vp10切り替え機能およびエンコード速度調整機能を追加
* デコーダにも設定を渡せるようにインタフェースを変更
* libvpx: コーデックのバージョンを指定する機能を追加
* libvpx: ラグフレーム数を暫定的に0〜4の範囲に収めることで低遅延化
          (将来的にはコンフィグで変更可能なようにする)

--- a/index.html
+++ b/index.html
@@ -107,6 +107,18 @@
         </fieldset>
         <fieldset style="display: none" id="libvpx_config">
           <legend>libvpx config</legend>
+          <div>
+            <label for="libvpx_config_codec">Version:</label>
+            <select id="libvpx_config_codec">
+              <option value="8">vp8</option>
+              <option value="9">vp9</option>
+              <option value="10">vp10</option>
+            </select>
+          </div>
+          <div>
+            <label for="libvpx_config_cpuused">Speed:</label>
+            <select id="libvpx_config_cpuused"></select>
+          </div>
         </fieldset>
         <fieldset style="display: none" id="openh264_config">
           <legend>openH264 config</legend>
