カメラのターゲットフレームレートを指定する機能を追加

--- a/index.html
+++ b/index.html
@@ -34,6 +34,18 @@
               <option>1920x1080</option>
             </optgroup>
           </select>
+          <select id="camera-framerate">
+            <option value="1">1 fps</option>
+            <option value="2">2 fps</option>
+            <option value="3">3 fps</option>
+            <option value="4">4 fps</option>
+            <option value="5">5 fps</option>
+            <option value="10">10 fps</option>
+            <option value="15">15 fps</option>
+            <option value="20">20 fps</option>
+            <option value="25">25 fps</option>
+            <option value="30">30 fps</option>
+          </select>
         </div>
         <!--<div>
           <input type="radio" name="input-type" id="input-file">File
