--- a/index.html
+++ b/index.html
@@ -166,6 +166,61 @@
         </fieldset>
         <fieldset style="display: none" id="openh264_config">
           <legend>openH264 config</legend>
+          <div>
+            <label for="openh264_config_usage">Usage:</label>
+            <select id="openh264_config_usage">
+              <option value="0">Camera (realtime)</option>
+              <option value="1">Screen (realtime)</option>
+            </select>
+          </div>
+          <div>
+            <label for="openh264_config_complexity">Complexity:</label>
+            <select id="openh264_config_complexity">
+              <option value="0">Low</option>
+              <option value="1">Medium</option>
+              <option value="2">High</option>
+            </select>
+          </div>
+          <div>
+            <label for="openh264_config_rc_mode">Rate-Control Mode:</label>
+            <select id="openh264_config_rc_mode">
+              <option value="0">Quality</option>
+              <option value="1">Bitrate</option>
+              <option value="2">Buffer-based</option>
+              <option value="3">Timestamp</option>
+            </select>
+          </div>
+          <div>
+            <label for="openh264_config_bitrate">Bitrate:</label>
+            <input type="text" id="openh264_config_bitrate" size="5" value="10000">
+          </div>
+          <div>
+            <label for="openh264_config_ref_frames">Ref Frames:</label>
+            <input type="text" id="openh264_config_ref_frames" size="5" value="-1">
+          </div>
+          <div>
+            <label for="openh264_config_entropy">Entropy Coding:</label>
+            <select id="openh264_config_entropy">
+              <option value="0">CAVLC</option>
+              <option value="1">CABAC</option>
+            </select>
+          </div>
+          <div>
+            <input type="checkbox" id="openh264_config_denoise">
+            <label for="openh264_config_denoise">Enable Denoise</label>
+          </div>
+          <div>
+            <input type="checkbox" id="openh264_config_bg_detect" checked>
+            <label for="openh264_config_bg_detect">Enable Background Detection</label>
+          </div>
+          <div>
+            <input type="checkbox" id="openh264_config_adaptive_quant" checked>
+            <label for="openh264_config_adaptive_quant">Enable Adaptive Quant</label>
+          </div>
+          <div>
+            <input type="checkbox" id="openh264_config_scene_detect" checked>
+            <label for="openh264_config_scene_detect">Enable Scene Change Detection</label>
+          </div>
         </fieldset>
       </fieldset>
     </div>
